# order_book

./: .gitmodules  Cargo.toml  order_book_log.txt
src/: connect_and_listen.rs  lib.rs  log_messages.rs  main.rs  messages.rs  quote.rs
src/models/: mod.rs  order_book.rs  order_book_2.rs  types.rs
src/models/kraken/: book.rs  mod.rs  translate.rs
tests/: test_book.rs
